# acars-bridge

./: .gitignore  Cargo.toml  Dockerfile.build_binary  README.md  flake.nix  renovate.json
.github/: dependabot.yaml
.github/workflows/: deploy.yaml  lint.yaml  pre-commit-updates.yaml  test_build.yml
src/: config.rs  main.rs  serverconfig.rs  stats.rs  tcp.rs  udp.rs  zmq.rs
