[package]
name = "acars-bridge"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.29"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-stream = "0.1.18"
sdre-rust-logging = "0.3.24"
clap = { version = "4.5.55", features = ["derive", "env"] }
sdre-stubborn-io = "0.6.15"
async-trait = "0.1.89"
zmq = "0.10.0"
tmq = "0.5.0"
futures = "0.3.31"
anyhow = "1.0.100"
