[package]
name = "acars-bridge"
version = "0.3.0"
edition = "2024"
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
log = "0.4.30"
sdre-rust-logging = "0.3.27"
sdre-stubborn-io = "0.7.1"
tmq = "0.5.0"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["full"] }
zmq = "0.10.0"

[profile.release]
# Best-in-class optimization for a long-running daemon: cross-crate inlining,
# stripped symbols, no panic unwind machinery. panic = abort is safe here
# because the supervisor architecture treats every error as a Result; nothing
# in the code path relies on unwinding to recover.
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
